fixed horizontal scrolling on shopping list

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -311,7 +311,7 @@ footer {
   height: 10px;
   background-color: white;
   top: 420px;
-  width: 100%;
+  width: 80%;
   height: 20px;
   /* bottom: 108px; */
 }
@@ -755,7 +755,8 @@ Custom media queries to separate MR & ER filters on
 collapse
 */
 @media (max-width: 768px) {
-  .list-group-horizontal, .owner-filter {
+  .list-group-horizontal,
+  .owner-filter {
     margin-bottom: 1rem;
   }
 }
@@ -776,7 +777,7 @@ li:hover span.perm-delete .hover-icon {
   /* opacity: 1 !important; */
   opacity: 1;
   transition-delay: 0.2s;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 /* on hover over non-span areas */
